--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@shopify/react-native-skia": "^1.5.7",
     "@tanstack/react-query": "^5.61.0",
     "axios": "^1.7.7",
     "expo": "~52.0.7",
     "expo-blur": "~14.0.1",
+    "expo-camera": "~16.0.6",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.2",
     "expo-font": "~13.0.1",
@@ -41,12 +43,16 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-fast-tflite": "^1.5.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-vision-camera": "^4.6.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.4"
+    "react-native-webview": "13.12.4",
+    "react-native-worklets-core": "^1.5.0",
+    "vision-camera-resize-plugin": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
