--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rn-poke",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -20,12 +20,15 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.0.6",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@shopify/react-native-skia": "^1.5.7",
     "@tanstack/react-query": "^5.61.0",
     "axios": "^1.7.7",
     "expo": "~52.0.7",
     "expo-blur": "~14.0.1",
+    "expo-camera": "~16.0.6",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.2",
     "expo-font": "~13.0.1",
@@ -40,13 +43,16 @@
     "expo-web-browser": "~14.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-vision-camera": "^4.6.1",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.4"
+    "react-native-webview": "13.12.4",
+    "react-native-worklets-core": "^1.5.0",
+    "vision-camera-resize-plugin": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -57,6 +63,7 @@
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "prettier": "^3.3.3",
