--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,7 @@
 
 pod 'GoogleMLKit/ObjectDetection', '7.0.0'
 pod 'GoogleMLKit/ImageLabeling', '7.0.0'
+pod 'GoogleMLKit/ObjectDetectionCustom', '7.0.0'
 
 require File.join(File.dirname(`node --print "require.resolve('expo/package.json')"`), "scripts/autolinking")
 require File.join(File.dirname(`node --print "require.resolve('react-native/package.json')"`), "scripts/react_native_pods")
